--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -31,7 +31,7 @@
                         <td class="mui-ellipsis small" valign="top">
                             <i class="bs-text-x-larger" style="font-weight: 900;">{{name}}&nbsp;</i><i class="bs-text-larger" style="font-weight: 100;">{{alias}}</i><br />
                             <i class="bs-text-small bs-text-gold" style="max-width: 90%;margin-top: 4px;white-space: normal;" ms-on-tap="openNav">
-                                <img src="img/icon/position.png" alt="" style="width: 17px;position: relative;top: 2px;">
+                                <img src="img/icon/position.svg" alt="" style="width: 17px;position: relative;top: 2px;">
                             {{address}}
                             </i>
                         </td>
