--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -7,6 +7,18 @@
     background-size: auto 56px;
 }
 
+.hotelDistance {
+    position: absolute;
+    right: 0;
+    top: 10px;
+    height: 24px;
+    width: 60px;
+    padding: 0;
+    line-height: 24px;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+
 .open-soon {
     position: relative;
     background-color: rgba(255, 255, 255, 0.4);
@@ -16,6 +28,25 @@
     border-radius: 50%;
     font-size: 10px;
     line-height: 56px;
+}
+
+.pirce-unit {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    width: auto;
+    background-color: rgba(0, 0, 0, .75);
+    padding: 4px 10px;
+    bottom: 10px;
+}
+
+.pirce-money {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: auto;
+    margin-right: 5px;
 }
 </style>
 <div ms-controller="index">
@@ -79,8 +110,8 @@
         <div class="swiper-wrapper" style="padding-left: 8px;">
             <div class="swiper-slide swiper-slide-marker" ms-repeat="moreHotel" data-repeat-rendered="swiperMoreHotelRender" ms-on-tap="goHotel(el.id)">
                 <div ms-css-background-image="linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url({{urlAPINet + el.coverUrl}})" style="height: 143px;background-size: cover;width: inherit;position: relative;top: -32px;">
-                    <span class="distance bs-text-x-smaller">{{round(el.distance/1000)}}km</span>
-                    <div style="display: flex;width: 100%;position: absolute;bottom: 5px;">
+                    <div class="hotelDistance bs-text-white bs-text-x-smaller layout-center">{{round(el.distance/1000)}}km</div>
+                    <!-- <div style="display: flex;width: 100%;position: absolute;bottom: 5px;">
                         <div class="bs-text-white bs-bg-black hotelImg" style="width: 97px;height: 38px;align-items: center;">
                             <div style="padding-left: 12px;display: flex;justify-content: center;flex-direction: column;">
                                 <div class="bs-text-normal" style="left: -13px;font-weight: bold;border-bottom: 1px solid #999">150元</div>
@@ -88,6 +119,13 @@
                             </div>
                             <div class="bs-text-smaller bs-text-lighter" style="font-weight: lighter;padding-left: 4px;">/晚起</div>
                         </div>
+                    </div> -->
+                    <div class="pirce-unit bs-text-white bs-text-x-smaller">
+                        <div class="pirce-money layout-center">
+                            <div class="bs-text-small bs-text-bold" style="border-bottom: 1px solid #999;">{{el.minPrice}}元</div>
+                            <div class="bs-text-fdd942 bs-text-small bs-text-bold">{{el.minTimeCoin}}时币</div>
+                        </div>
+                        <div>/晚起</div>
                     </div>
                     <div class="hotelName bs-text-444">
                         <div style="font-weight: bold;">{{el.name}}</div>
