--- a/js/util/pay.html
+++ b/js/util/pay.html
@@ -6,22 +6,23 @@
     left: 0;
   }
   .modal-content-title {
-    text-align: center;
+    text-align: left;
     line-height: 48px;
     border-bottom: 1px solid #ddd;
-    font-size: 18px;
+    font-size: 15px;
+    padding-left: 15px;
   }
   .modal-close {
     width: 20px;
     height: 20px;
-    background-image: url(../img/close.svg);
+    background-image: url(../img/icon/close_black.svg);
     background-size: cover;
     background-repeat: no-repeat;
     display: inline-block;
     box-sizing: content-box;
     border: 13px solid transparent;
     top: 1px;
-    left: 3px;
+    right: -3px;
     position: absolute;
   }
   .modal-content-item {
