1、去除默认登录 2、设备页面rid的问题 3、订单列表页面弹窗关闭的问题 4、前置问题完成后跳页的bug。（前置问题的目的地图片需要重新做）

--- a/js/pages/service/orderList.html
+++ b/js/pages/service/orderList.html
@@ -68,7 +68,7 @@
                 <br> 邀请他们前去办理入住吧
                 <br>
             </div>
-            <div ms-on-tap="send" class="" style="height: 100px;padding-top: 50px;font-size: 20px;">关闭
+            <div ms-on-tap="close" class="" style="height: 100px;padding-top: 50px;font-size: 20px;">关闭
                 <br>
             </div>
         </div>
