--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -231,7 +231,7 @@ div ul li {
             </div>
         </a>
     </div>
-    <div class="gradeRank bs-bg-white">
+    <!-- <div class="gradeRank bs-bg-white">
         <div class="grade">
             <div style="margin-right: 16px;">会员等级</div>
             <img src="../img/card/card_No1.svg" style="height: 20px;width: 24px;">
@@ -240,24 +240,24 @@ div ul li {
             <div>全区排名</div>
             <div style="margin-left: 16px;">869</div>
         </div>
-    </div>
+    </div> -->
     <div class="assets bs-bg-white">
         <div style="margin-bottom: 40px;">
             总资产（时/s）
         </div>
         <div class="assets-number bs-text-x-larger">
             <div style="color: #fcc20f">
-                30000.00 s
+                {{vmUser.TimeCoinBalance}}<span style="padding-left: 6px;">s</span>
             </div>
-            <div class="bs-text-444">
+            <!-- <div class="bs-text-444">
                 1000.00 s
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- <div class="credit bs-bg-white">
         <canvas ms-attr="{id: 'circleGolden' + el.id}" style="z-index: 2;order: 0;"></canvas>
     </div> -->
-    <div class="content bs-bg-white" style="margin: 12px 0;">
+    <!-- <div class="content bs-bg-white" style="margin: 12px 0;">
         <a href="../coupon.html">
             <div>
                 优惠券
@@ -266,7 +266,7 @@ div ul li {
                 <img src="../img/icon/right-arrow.svg" class="icon" alt="">
             </div>
         </a>
-    </div>
+    </div> -->
     <!-- <div class="content bs-bg-white" style="margin: 12px 0;">
         <a href="../promotion-detail.html">
             <div>
@@ -307,10 +307,10 @@ div ul li {
                     <label>您的手机</label>
                     <input type="text" ms-duplex="newMobile" autofocus="autofocus" />
                 </div>
-                <div class="mui-input-row" style="color: #bdbdbd;">
+                <!-- <div class="mui-input-row" style="color: #bdbdbd;">
                     <label>您的生日</label>
                     <input type="text" ms-duplex="newMobile" autofocus="autofocus" />
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
