解决高清屏 canvas 模糊问题

--- a/js/pages/assess/getTimeCoins.html
+++ b/js/pages/assess/getTimeCoins.html
@@ -19,21 +19,21 @@
 
 .friend-img {
     background: url(../img/qietu-haoyoutuijian702-340.jpg);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .early-img {
     background: url(../img/qietu-tiqiantuifang702-340.jpg);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .vip-img {
     background: url(../img/qietu-chengweihuiyuan702-340.jpg);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
