--- a/js/pages/city/city.html
+++ b/js/pages/city/city.html
@@ -112,7 +112,7 @@
     <!-- 地图模式下的底部功能栏 -->
     <div ms-if="!isShowHotelDetail&&isShowMap">
         <button type="button" class="calendarBtn bs-text-white" ms-click="openTimePanel">
-            <div class="bs-text-smaller calendar-icon bs-text-fdd942" ms-css-background-image="type?'url(img/icon/clock-333.svg)':'url(img/icon/calendar-yellow.svg)'">
+            <div class="bs-text-smaller calendar-icon bs-text-fdd942" ms-css-background-image="type?'url(img/icon/clock-yellow.svg)':'url(img/icon/calendar-yellow.svg)'">
                 <span ms-if="!type">{{getToday('day')}}</span>
             </div>
             <div class="bs-text-smaller bottomBarTime">
@@ -169,7 +169,7 @@
             <div style="position: relative;left: 5px;top: -3px;margin-bottom: 3px;">价格</div>
         </div>
         <div class="calendarBtnInList bs-text-white" ms-click="openTimePanel">
-            <div class="bs-text-smaller calendar-icon" ms-css-background-image="type?'url(img/icon/clock-333.svg)':'url(img/icon/calendar-yellow.svg)'" style="margin-right: 10px;">
+            <div class="bs-text-smaller calendar-icon" ms-css-background-image="type?'url(img/icon/clock-yellow.svg)':'url(img/icon/calendar-yellow.svg)'" style="margin-right: 10px;">
                 <span class="bs-text-fdd942" ms-if="!type">{{getToday('day')}}</span>
             </div>
             <div class="bs-text-smaller bottomBarTime">
