--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -63,8 +63,7 @@
         
         <!-- 房型筛选 -->
         <div class="typeFilter bs-text-large">
-            <div class="bs-bg-graytypeFilter-item" style="margin-right: 7px;">
-            </div>
+            <img src="../img/icon/icon-biaotifuhao-444.svg" style="height: 16px;margin-top: 13px;margin-right: 7px;">
             <div class="typeFilter-item bs-text-51" style="flex-grow: 1;">房型筛选
             </div>
         </div>
