--- a/js/pages/service/orderList.html
+++ b/js/pages/service/orderList.html
@@ -49,7 +49,7 @@
                 <div class="content-infor" ms-repeat="data" ms-if-loop="el.processStatus==1">
                     <div class="bs-text-x-large">{{el.roomNo}}</div>
                     <div class="bs-text-large">{{el.userName}}</div>
-                    <div class="sendBtn bs-text-yellow bs-bg-444" ms-on-tap="send(el.customerStatus)">
+                    <div class="sendBtn bs-text-yellow bs-bg-444" ms-on-tap="send(el.customerStatus,el.oid,el.id,el.rid)">
                         {{el.customerStatus==1?'去做准备':sendBtnText}}
                     </div>
                 </div>
