--- a/js/pages/service/ready.html
+++ b/js/pages/service/ready.html
@@ -232,7 +232,7 @@ div .mui-popup-buttons .mui-popup-button {
                 18°C
             </div>
         </div>
-        <div class="header-content">
+        <div class="header-content" onclick="javascript:location.href='../inroom.html';">
             <img src="../img/icon/humidity.svg" class="img-ul">
             <div style="margin-left: 8px;">
                 30%RH
