弹窗首页押金提示和预温提示样式修改

--- a/js/pages/service/popPre-temperature.html
+++ b/js/pages/service/popPre-temperature.html
@@ -37,7 +37,7 @@
     margin: 5vw auto;
 }
 </style>
-<article ms-controller="preTemperature" style="height: 130vw">
+<article ms-controller="preTemperature" style="height: 130vw;margin-top: -11vw;">
     <div class="firstContent">
         <div style="padding-top: 7vw;">
             <div class="yuWenImg">
@@ -49,5 +49,5 @@
             <div class="yuWenContent">请安排好出行时间，谢谢配合！</div>
         </div>
     </div>
-    <div class="secondContent" ><img src="../img/icon/icon-tanchuangchacha30_30.svg" style="margin: 3vw;" ms-on-tap="closePopPre"></div>
+    <div class="secondContent" ><img src="../img/icon/icon-tanchuangchacha30_30.svg" style="height: 30px;margin-top: 10px;" ms-on-tap="closePopPre"></div>
 </article>
