默认时间的设置

--- a/js/pages/city/city.html
+++ b/js/pages/city/city.html
@@ -116,9 +116,9 @@
                 <span ms-if="!type">{{getToday('day')}}</span>
             </div>
             <div class="bs-text-smaller bottomBarTime">
-                <div>{{bottomBartStartTime}}</div>
-                <div>-</div>
-                <div style="min-width: 45px;">{{bottomBartEndTime}}</div>
+                <div>{{bottomBarStartTime}}</div>
+                <div style="margin: 0 2px;">-</div>
+                <div style="min-width: 45px;">{{bottomBarEndTime}}</div>
             </div>
         </button>
         <div class="mapToListBtn calendar-icon bs-bg-white" ms-on-tap="toggleMap"></div>
@@ -173,9 +173,9 @@
                 <span class="bs-text-fdd942" ms-if="!type">{{getToday('day')}}</span>
             </div>
             <div class="bs-text-smaller bottomBarTime">
-                <div>{{bottomBartStartTime}}</div>
-                <div>-</div>
-                <div style="min-width: 45px;">{{bottomBartEndTime}}</div>
+                <div>{{bottomBarStartTime}}</div>
+                <div style="margin: 0 2px;">-</div>
+                <div style="min-width: 45px;">{{bottomBarEndTime}}</div>
             </div>
         </div>
         <div ms-on-tap="toggleMap">
